// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service GrpcRssReader {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
  rpc AuthenticateUser (AuthRequest) returns (AuthReply) {}
  rpc AddUser (AuthRequest) returns (AuthReply) {}
  //rpc SendSettings (stream SettingsRequest) returns (Settings) {}
  //rpc RecieveSettings (SettingsRequest) returns (stream Settings) {}
  rpc SaveSites (stream Settings) returns (SettingsSavedReply) {}
  rpc LoadSitesList (SettingsRequest) returns (stream Settings) {}
  rpc SaveTags (stream Settings) returns (SettingsSavedReply) {}
  rpc LoadTagsList (SettingsRequest) returns (stream Settings) {}
  rpc FindNews (NewsRequest) returns (stream NewsReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
//Authentication request
message AuthRequest {
  string username = 1;
  string password = 2;
}
//Authentication reply 
message AuthReply {
  string checkresult = 1;
  string authtoken = 2;
}
message DoneReply {
  string result = 1;
}

message SettingsRequest {
  string userid = 1;
  string authtoken = 2;
}
//Settings send between reply 
message Settings {
  string userid = 1;
  string field = 2;
  //string type = 3;
  //string site = 2;
  //string tag = 2;
}
message SettingsSavedReply {
  int64 count = 1;
}

message NewsRequest {
        string userid = 1;
        string url = 2;//не нужно т к есть настройки
}
 
// The response message containing the greetings

message NewsReply {
        string subject = 1;
        string summary = 2;
        string url = 3;
        string topic = 4;
        string site = 5;
        string date = 6;
        string id = 7;
}
/*message NewsReply {
        string subject = 1;
        string summary = 2;
        message RssItem  {
        string url = 1;
        string subject = 2;
        string summary = 3;
        string topic = 4;
        string site = 5;
        string date = 6;
        string id = 7;
    }
}*/
